--- a/styles.css
+++ b/styles.css
@@ -48,12 +48,11 @@ hr{
 #options{
     display: flex;
     flex-direction: column;
-    /* align-items: center;     */
     justify-content: center;
 }
 .btn{
     outline: 0;
-    border:0.5px  solid rgb(119, 118, 121);
+    border:0.5px solid rgb(119, 118, 121);
     width: 40vw;
     height: 40px;
     margin: 5px;
@@ -85,4 +84,37 @@ hr{
 }
 #submit:hover{
     background-color: #577BC1;
+}
+
+/* 🔽 MOBILE RESPONSIVE STYLES */
+@media (max-width: 768px) {
+    .container {
+        width: 90vw;
+        border-radius: 20px;
+        padding: 20px;
+    }
+
+    header {
+        padding-left: 10px;
+        padding-top: 30px;
+    }
+
+    header h1 {
+        font-size: 28px;
+    }
+
+    #question {
+        font-size: 18px;
+    }
+
+    .btn {
+        width: 80vw;
+        font-size: 16px;
+    }
+
+    #submit {
+        margin-left: 35%;
+        width: 100px;
+        height: 35px;
+    }
 }
