--- a/styles.css
+++ b/styles.css
@@ -105,10 +105,12 @@ hr{
     }
 
     #question {
+        padding-top: 40px;
         font-size: 18px;
     }
 
     .btn {
+        margin-top: 20px;
         width: 60vw;
         font-size: 16px;
     }
